chore fix api and admin
